# 24-vision-lwh

./: CHANGELOG.md  Instruction.md  README.md  detect.cpp  test.cpp  报告.md
CMake_I-master/: CMakeLists.txt
CMake_I-master/common/: CMakeLists.txt
CMake_I-master/common/math/: CMakeLists.txt
CMake任务/: CMakeLists.txt
CMake任务/modules/A1/: CMakeLists.txt
CMake任务/modules/M1/: CMakeLists.txt
CMake任务/modules/M2/: CMakeLists.txt
Cmake任务/: README.md
Cmake任务/CMake_I-master/: CMakeLists.txt
Cmake任务/CMake_I-master/modules/: CMakeLists.txt
Cmake任务/CMake_I-master/modules/A2/: CMakeLists.txt
Cmake任务/CMake_II-master/: CMakeLists.txt  README.md
Cmake任务/CMake_II-master/common/: CMakeLists.txt
Cmake任务/CMake_II-master/modules/: CMakeLists.txt
SSH任务/: README.md
SSH任务/.ssh/: authorized_keys  config  id_rsa  id_rsa.pub  known_hosts
onnx部署/: CMakeLists.txt  EG.md  README.md  classify.cpp  facedetect.cpp  onnx_detect.cpp  test  yolo_onnx.ipynb  yolodetect.cpp  yolotest
ros通信/: README.md  camera.launch  camera_node.py
tensorRT部署/: CMakeLists.txt  README.md  export2engine.cpp  tensorRTdeploy.cpp
点云投影任务/: Cloud2pixel.py  README.md  pointcloud.ipynb
点云投影任务/智能感知激光雷达任务数据/: Param.yml  readme.txt
点云投影任务/智能感知激光雷达任务数据/four/: cloud_0.csv  cloud_1.csv  cloud_2.csv  cloud_3.csv  cloud_4.csv
点云投影任务/智能感知激光雷达任务数据/one/: cloud_0.csv  cloud_1.csv  cloud_2.csv  cloud_3.csv  cloud_4.csv
点云投影任务/智能感知激光雷达任务数据/three/: cloud_0.csv  cloud_1.csv  cloud_2.csv  cloud_3.csv  cloud_4.csv
点云投影任务/智能感知激光雷达任务数据/two/: cloud_0.csv  cloud_1.csv  cloud_2.csv  cloud_3.csv  cloud_4.csv
装甲板分类/: Classify.ipynb  README.md  classes.json
装甲板识别/: README.md  detect.cpp
